# GmailHelper

./: .gitignore  LICENSE  pyproject.toml  readme.md  rules.json
gmail_helper/api/: containers.py  main.py
gmail_helper/api/email_fetcher/: models.py  service.py  store.py
gmail_helper/api/email_service/: models.py  orchestrator.py  router.py  rules_processor.py  service.py
gmail_helper/common/: config.py  utils.py
gmail_helper/common/contracts/: emails_interface.py  rules_contract.py
gmail_helper/common/services/: gmail_service.py
gmail_helper/common/utils/: api_framework.py  dateutils.py  exceptions.py  logger.py
gmail_helper/stores/: emails_store.py
gmail_helper/worker/: emails_store.py  orchestrator.py  rules_processor.py
tests/manual/: test_orchestrate.py
tests/unit/api/: test_email_service.py  test_orchestrator.py  test_rules_processor.py
tests/unit/api/email_fetcher/: test_service.py
tests/unit/worker/: test_orchestrator.py  test_rules_processor.py
